--- a/Homework (angular)/list.html
+++ b/Homework (angular)/list.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="App">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Angular</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
   <script src="app.js"></script>
 </head>
-<body ng-app="App">
+<body>
+
+  <p><strong>Задание 1.</strong> Создать страницу на который будет список ФИО с Radio Button. При выборе ФИО будет выводится текст: Добро пожаловать, ФИО!</p>
+
   <div ng-controller="AppController as people">
     <ul>
       <li ng-repeat="person in people.list">
@@ -20,5 +25,86 @@
 
     <tt>Добро пожаловать, {{people.fullName}}!</tt>
   </div>
+
+  <p>------------------------------------------------------------------------------------</p>
+
+  <p><strong>Задание 2.</strong> Необходимо создать навигационное меню. Для реализации использовать AngularJS.</p>
+
+  <div ng-controller='MenuController as menu'>
+    <ul class="menu">
+      <li class="menu__item" ng-class="{'hover': menu.isOpened==='file'}" ng-mouseover="menu.showSubmenu('file')" ng-mouseleave='menu.hideSubmenu()'>
+        <div class="menu__title">File
+          <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        </div>
+        <div class="submenu" ng-show="menu.isOpened==='file'">
+          <div class="submenu__item">
+            <i class="fa fa-file-o" aria-hidden="true"></i>Submenu1
+          </div>
+        </div>
+      </li>
+      <li class="menu__item" ng-class="{'hover': menu.isOpened==='edit'}" ng-mouseover="menu.showSubmenu('edit')" ng-mouseleave='menu.hideSubmenu()'>
+        <div class="menu__title">Edit
+          <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        </div>
+        <div class="submenu" ng-show="menu.isOpened==='edit'">
+          <div class="submenu__item">
+            <i class="fa fa-file-o" aria-hidden="true"></i>Submenu1
+          </div>
+          <div class="submenu__item">
+            <i class="fa fa-file-o" aria-hidden="true"></i>Submenu2
+          </div>
+        </div>
+      </li>
+      <li class="menu__item" ng-class="{'hover': menu.isOpened==='view'}" ng-mouseover="menu.showSubmenu('view')" ng-mouseleave='menu.hideSubmenu()'>
+        <div class="menu__title">View
+          <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        </div>
+        <div class="submenu" ng-show="menu.isOpened==='view'">
+          <div class="submenu__item">
+            <i class="fa fa-file-o" aria-hidden="true"></i>Submenu1
+          </div>
+          <div class="submenu__item">
+            <i class="fa fa-file-o" aria-hidden="true"></i>Submenu2
+          </div>
+          <div class="submenu__item">
+            <i class="fa fa-file-o" aria-hidden="true"></i>Submenu3
+          </div>
+        </div>
+      </li>
+      <li class="menu__item" ng-class="{'hover': menu.isOpened==='insert'}" ng-mouseover="menu.showSubmenu('insert')" ng-mouseleave='menu.hideSubmenu()'>
+        <div class="menu__title">Insert
+          <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        </div>
+        <div class="submenu" ng-show="menu.isOpened==='insert'">
+          <div class="submenu__item">
+            <i class="fa fa-file-o" aria-hidden="true"></i>Submenu1
+          </div>
+          <div class="submenu__item">
+            <i class="fa fa-file-o" aria-hidden="true"></i>Submenu2
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+
+
+  <p>------------------------------------------------------------------------------------</p>
+
+  <p><strong>Задание 3.</strong> Карточка футболиста. На странице поместить select в котором будет список футболистов (все характеристики футболиста хранить в обьектах). При выборе из выпадающего списка необходимо подгрузить основную информацию. При этом необходимо реализовать динамическую подгрузку шаблона. Для каждого футболиста сделать свой шаблон.</p>
+
+  <div class="flex" ng-controller='PlayerController as players'>
+    <select class="team" ng-model="myPlayer" ng-options="person.name for person in players.list">
+      <option value="">-- Выберите футболиста --</option>
+    </select>
+
+    <div class="info" ng-show='myPlayer'>
+      <p><strong>Имя:</strong> <span ng-bind="myPlayer.name"></span></p>
+      <p><strong>Дата рождения:</strong> <span ng-bind="myPlayer.date_of_birth"></span></p>
+      <p><strong>Позиция:</strong> <span ng-bind="myPlayer.position"></span></p>
+      <p><strong>Клуб:</strong> <span ng-bind="myPlayer.club"></span></p>
+      <p><strong>Описание:</strong> <span ng-bind="myPlayer.bio"></span></p>
+    </div>
+  </div>
+
 </body>
 </html>
